--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
   position: relative;
   width: 100vw;
   height: 100vh;
-  background-image: url(background.png);
+  background-image: url(assets/background.png);
   background-size: cover;
   background-position: center;
   display: flex;
